--- a/package.json
+++ b/package.json
@@ -9,47 +9,49 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@headlessui/react": "^1.7.18",
-    "@heroicons/react": "^2.1.1",
+    "@headlessui/react": "^1.7.19",
+    "@heroicons/react": "^2.1.3",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.7",
-    "@tailwindcss/typography": "^0.5.10",
+    "@tailwindcss/typography": "^0.5.13",
+    "axios": "^1.6.8",
     "client-only": "^0.0.1",
+    "formik": "^2.4.6",
     "framer-motion": "^10.18.0",
     "google-map-react": "^2.2.1",
-    "next": "^14.1.3",
+    "next": "^14.2.3",
     "next-auth": "^4.24.7",
-    "rc-slider": "^10.5.0",
-    "react": "^18.2.0",
+    "next13-progressbar": "^1.2.1",
+    "rc-slider": "^10.6.2",
+    "react": "^18.3.1",
     "react-animate-height": "^3.2.3",
-    "react-datepicker": "^6.2.0",
-    "react-dom": "^18.2.0",
+    "react-dom": "^18.3.1",
     "react-hooks-global-state": "^2.1.0",
     "react-hot-toast": "^2.4.1",
+    "react-input-mask": "^2.0.4",
     "react-modal-video": "^2.0.1",
     "react-swipeable": "^7.0.1",
     "react-use": "^17.5.0",
     "react-use-keypress": "^1.3.1",
-    "sass": "^1.71.1",
+    "sass": "^1.76.0",
     "server-only": "^0.0.1"
   },
   "devDependencies": {
     "@types/google-map-react": "^2.1.10",
-    "@types/node": "20.11.25",
-    "@types/react": "18.2.64",
-    "@types/react-datepicker": "^4.19.6",
-    "@types/react-dom": "18.2.21",
+    "@types/node": "20.12.7",
+    "@types/react": "18.3.1",
+    "@types/react-dom": "18.3.0",
     "@types/react-modal-video": "^1.2.3",
-    "@typescript-eslint/eslint-plugin": "^7.1.1",
-    "@typescript-eslint/parser": "^7.1.1",
-    "autoprefixer": "^10.4.18",
-    "eslint": "8.57.0",
-    "eslint-config-next": "^14.1.3",
+    "@typescript-eslint/eslint-plugin": "^7.8.0",
+    "@typescript-eslint/parser": "^7.8.0",
+    "autoprefixer": "^10.4.19",
+    "eslint": "9.1.1",
+    "eslint-config-next": "^14.2.3",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
-    "postcss": "^8.4.35",
+    "postcss": "^8.4.38",
     "prettier": "^3.2.5",
-    "tailwindcss": "^3.4.1",
-    "typescript": "5.4.2"
+    "tailwindcss": "^3.4.3",
+    "typescript": "5.4.5"
   }
 }
