--- a/package.json
+++ b/package.json
@@ -34,13 +34,15 @@
     "react-use": "^17.5.0",
     "react-use-keypress": "^1.3.1",
     "sass": "^1.76.0",
-    "server-only": "^0.0.1"
+    "server-only": "^0.0.1",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/google-map-react": "^2.1.10",
     "@types/node": "20.12.7",
     "@types/react": "18.3.1",
     "@types/react-dom": "18.3.0",
+    "@types/react-input-mask": "^3.0.5",
     "@types/react-modal-video": "^1.2.3",
     "@typescript-eslint/eslint-plugin": "^7.8.0",
     "@typescript-eslint/parser": "^7.8.0",
