--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "chisfis-nextjs",
-  "version": "0.2.2",
+  "name": "WeltCar",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -15,6 +15,9 @@
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.13",
     "axios": "^1.6.8",
+    "effector": "^22.8.8",
+    "effector-next": "^1.3.3",
+    "effector-react": "^22.5.4",
     "client-only": "^0.0.1",
     "formik": "^2.4.6",
     "framer-motion": "^10.18.0",
@@ -33,13 +36,13 @@
     "react-swipeable": "^7.0.1",
     "react-use": "^17.5.0",
     "react-use-keypress": "^1.3.1",
-    "sass": "^1.76.0",
+    "sass": "^1.77.1",
     "server-only": "^0.0.1",
     "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/google-map-react": "^2.1.10",
-    "@types/node": "20.12.7",
+    "@types/node": "20.12.11",
     "@types/react": "18.3.1",
     "@types/react-dom": "18.3.0",
     "@types/react-input-mask": "^3.0.5",
@@ -47,7 +50,7 @@
     "@typescript-eslint/eslint-plugin": "^7.8.0",
     "@typescript-eslint/parser": "^7.8.0",
     "autoprefixer": "^10.4.19",
-    "eslint": "9.1.1",
+    "eslint": "9.2.0",
     "eslint-config-next": "^14.2.3",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
