--- a/package.json
+++ b/package.json
@@ -16,9 +16,6 @@
     "@tailwindcss/typography": "^0.5.13",
     "axios": "^1.6.8",
     "client-only": "^0.0.1",
-    "effector": "^22.8.8",
-    "effector-next": "^1.3.3",
-    "effector-react": "^22.5.4",
     "formik": "^2.4.6",
     "framer-motion": "^10.18.0",
     "google-map-react": "^2.2.1",
@@ -32,6 +29,7 @@
     "react-hooks-global-state": "^2.1.0",
     "react-input-mask": "^2.0.4",
     "react-modal-video": "^2.0.1",
+    "react-paginate": "^8.2.0",
     "react-swipeable": "^7.0.1",
     "react-toastify": "^10.0.5",
     "react-use": "^17.5.0",
