--- a/package.json
+++ b/package.json
@@ -10,16 +10,16 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.19",
-    "@heroicons/react": "^2.1.3",
+    "@heroicons/react": "^2.1.4",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.13",
-    "axios": "^1.6.8",
+    "axios": "^1.7.2",
     "client-only": "^0.0.1",
     "formik": "^2.4.6",
     "framer-motion": "^10.18.0",
     "google-map-react": "^2.2.1",
-    "next": "^14.2.3",
+    "next": "^14.2.4",
     "next-auth": "^4.24.7",
     "next13-progressbar": "^1.2.1",
     "rc-slider": "^10.6.2",
@@ -28,33 +28,34 @@
     "react-dom": "^18.3.1",
     "react-hooks-global-state": "^2.1.0",
     "react-input-mask": "^2.0.4",
-    "react-modal-video": "^2.0.1",
+    "react-modal-video": "^2.0.2",
     "react-paginate": "^8.2.0",
     "react-swipeable": "^7.0.1",
     "react-toastify": "^10.0.5",
+    "react-tooltip": "^5.27.0",
     "react-use": "^17.5.0",
     "react-use-keypress": "^1.3.1",
-    "sass": "^1.77.1",
+    "sass": "^1.77.6",
     "server-only": "^0.0.1",
     "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/google-map-react": "^2.1.10",
-    "@types/node": "20.12.11",
-    "@types/react": "18.3.1",
+    "@types/node": "20.14.5",
+    "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
     "@types/react-input-mask": "^3.0.5",
     "@types/react-modal-video": "^1.2.3",
-    "@typescript-eslint/eslint-plugin": "^7.8.0",
-    "@typescript-eslint/parser": "^7.8.0",
+    "@typescript-eslint/eslint-plugin": "^7.13.1",
+    "@typescript-eslint/parser": "^7.13.1",
     "autoprefixer": "^10.4.19",
-    "eslint": "9.2.0",
-    "eslint-config-next": "^14.2.3",
+    "eslint": "9.5.0",
+    "eslint-config-next": "^14.2.4",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "postcss": "^8.4.38",
-    "prettier": "^3.2.5",
-    "tailwindcss": "^3.4.3",
+    "prettier": "^3.3.2",
+    "tailwindcss": "^3.4.4",
     "typescript": "5.4.5"
   }
 }
