--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-use-keypress": "^1.3.1",
     "sass": "^1.77.6",
     "server-only": "^0.0.1",
+    "swiper": "^11.1.4",
     "yup": "^1.4.0"
   },
   "devDependencies": {
