--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "sass": "^1.77.6",
     "server-only": "^0.0.1",
     "swiper": "^11.1.4",
-    "yup": "^1.4.0"
+    "yup": "^1.4.0",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@types/google-map-react": "^2.1.10",
