--- a/package.json
+++ b/package.json
@@ -15,20 +15,17 @@
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.13",
     "axios": "^1.7.2",
-    "client-only": "^0.0.1",
     "formik": "^2.4.6",
     "framer-motion": "^10.18.0",
-    "google-map-react": "^2.2.1",
     "next": "^14.2.4",
-    "next-auth": "^4.24.7",
     "next13-progressbar": "^1.2.1",
+    "nuqs": "^1.17.4",
     "rc-slider": "^10.6.2",
     "react": "^18.3.1",
     "react-animate-height": "^3.2.3",
     "react-dom": "^18.3.1",
     "react-hooks-global-state": "^2.1.0",
     "react-input-mask": "^2.0.4",
-    "react-modal-video": "^2.0.2",
     "react-paginate": "^8.2.0",
     "react-swipeable": "^7.0.1",
     "react-toastify": "^10.0.5",
@@ -36,18 +33,15 @@
     "react-use": "^17.5.0",
     "react-use-keypress": "^1.3.1",
     "sass": "^1.77.6",
-    "server-only": "^0.0.1",
     "swiper": "^11.1.4",
     "yup": "^1.4.0",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
-    "@types/google-map-react": "^2.1.10",
     "@types/node": "20.14.5",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
     "@types/react-input-mask": "^3.0.5",
-    "@types/react-modal-video": "^1.2.3",
     "@typescript-eslint/eslint-plugin": "^7.13.1",
     "@typescript-eslint/parser": "^7.13.1",
     "autoprefixer": "^10.4.19",
