--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "formik": "^2.4.6",
     "framer-motion": "^10.18.0",
     "next": "^14.2.4",
+    "next-themes": "^0.3.0",
     "next13-progressbar": "^1.2.1",
     "nuqs": "^1.17.4",
     "rc-slider": "^10.6.2",
