--- a/package.json
+++ b/package.json
@@ -24,11 +24,15 @@
     "rc-slider": "^10.6.2",
     "react": "^18.3.1",
     "react-animate-height": "^3.2.3",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.3.1",
     "react-hooks-global-state": "^2.1.0",
+    "react-icons": "^5.2.1",
     "react-input-mask": "^2.0.4",
     "react-paginate": "^8.2.0",
     "react-swipeable": "^7.0.1",
+    "react-tag-input": "^6.10.3",
     "react-toastify": "^10.0.5",
     "react-tooltip": "^5.27.0",
     "react-use": "^17.5.0",
