--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "formik": "^2.4.6",
     "framer-motion": "^10.18.0",
     "next": "^14.2.4",
+    "next-intl": "^3.26.1",
     "next-themes": "^0.3.0",
     "next13-progressbar": "^1.2.1",
     "nuqs": "^1.17.4",
@@ -30,6 +31,7 @@
     "react-hooks-global-state": "^2.1.0",
     "react-icons": "^5.2.1",
     "react-input-mask": "^2.0.4",
+    "react-intl": "^7.0.4",
     "react-paginate": "^8.2.0",
     "react-swipeable": "^7.0.1",
     "react-tag-input": "^6.10.3",
@@ -47,8 +49,8 @@
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
     "@types/react-input-mask": "^3.0.5",
-    "@typescript-eslint/eslint-plugin": "^7.13.1",
-    "@typescript-eslint/parser": "^7.13.1",
+    "@typescript-eslint/eslint-plugin": "^8.0.0",
+    "@typescript-eslint/parser": "^8.0.0",
     "autoprefixer": "^10.4.19",
     "eslint": "9.5.0",
     "eslint-config-next": "^14.2.4",
