--- a/.env.production
+++ b/.env.production
@@ -1,6 +1,6 @@
-NEXT_PUBLIC_SERVER_URL=https://stageapi.weltcar.de
-NEXT_PUBLIC_SERVER_HOSTNAME=stageapi.weltcar.de
-NEXT_PUBLIC_APP_HOSTNAME=stage.weltcar.de
+NEXT_PUBLIC_SERVER_URL=https://api.weltcar.de
+NEXT_PUBLIC_SERVER_HOSTNAME=api.weltcar.de
+NEXT_PUBLIC_APP_HOSTNAME=weltcar.de
 IMAGE_OPTIMIZATION=true
 NEXT_PUBLIC_GOOGLE_ANALYTICS=G-DCKJN6RHCD
 NEXT_PUBLIC_DAYS_BEFORE_TOKEN_EXPIRE_CHECK=5
